Add tab complete to freeze commands